# lesson_28

./: .gitignore  README.md  csv_to_json_decoder.py  pyproject.toml
ads/: admin.py  base_views.py  models.py  views.py
ads/migrations/: 0001_initial.py  0002_ad_image_alter_ad_author_alter_ad_category_and_more.py  0002_alter_ad_author_alter_ad_category_and_more.py  0003_ad_is_published.py  0003_user_total_ads.py  0004_alter_ad_image.py  0004_remove_user_total_ads.py  0005_ad_price_location_lat_location_lng_user_age.py  0006_alter_user_role.py
homework_28/: settings.py  urls.py
homework_28/urls_lists/: urls_ads.py  urls_cats.py  urls_locs.py  urls_users.py
